--- a/src/EightBall.css
+++ b/src/EightBall.css
@@ -1,8 +1,7 @@
 .EightBall {
-    background-color: black;
     border-radius: 100%;
-    height: 50vw;
-    width: 50vw;
+    height: 60vw;
+    width: 60vw;
     display: flex;
     margin-left: auto;
     margin-right: auto;
@@ -13,4 +12,8 @@
 .EightBall-header {
     color: white;
     padding: 4rem;
+}
+
+.EightBall-reset {
+    margin: 1rem;
 }
